# Arduino-UNO-HAL

./: .gitignore  CMakeLists.txt  README.md  todo.md
HAL/: CMakeLists.txt
HAL/GPIO/: CMakeLists.txt
HAL/GPIO/inc/: gpio.h
HAL/GPIO/src/: gpio.c  gpio_interrupts.c
HAL/UART/: CMakeLists.txt
HAL/UART/inc/: uart.h
HAL/UART/src/: uart.c  uart_advanced.c  uart_base.c
HAL/gpio/src/: gpio.c
HAL/interrupt/: CMakeLists.txt
HAL/interrupt/inc/: interrupt.h
HAL/interrupt/src/: interrupt.c
HAL/timer/: CMakeLists.txt
HAL/timer/inc/: timer.h
HAL/timer/src/: timer.c  timer_base.c  timer_outputCompare.c
HAL/uart/inc/: uart.h
HAL/uart/src/: uart.c
HAL/util/: CMakeLists.txt
HAL/util/inc/: registers.h  util.h
cmake/: ArduinToolchain.cmake  arduinoToolchain.cmake
main/: CMakeLists.txt
main/src/: main.c
tests/: CMakeLists.txt
tests/GPIO/: CMakeLists.txt
tests/GPIO/inc/: gpio_test.h
tests/GPIO/src/: gpio_test.c
tests/UART/: CMakeLists.txt
tests/gpio/: CMakeLists.txt
tests/gpio/inc/: test_gpio.h
tests/gpio/src/: test_gpio.c
tests/interrupt/: CMakeLists.txt
tests/interrupt/inc/: test_interrupt.h
tests/main/: CMakeLists.txt
tests/main/src/: main.c
tests/timer/: CMakeLists.txt
tests/timer/inc/: test_timer.h
tests/uart/: CMakeLists.txt
tests/uart/inc/: test_uart.h
tests/uart/src/: test_uart.c
